fix lime logo centering

--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
       .dropdown:hover .dropdown-content {
         display: block;
       }
+
+      .lime-logo {
+        position: absolute;
+        top: 0.75%;
+        right: 1%;
+      }
     </style>
 </head>
 <body>
@@ -171,6 +177,7 @@
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
+    <img class="lime-logo" src="lime.svg" width="45px">
   </div>
 
   <div id="box">
