added compatibility list

--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -40,6 +40,7 @@
            <li><a href="building/android.html">Android</a></li>
            <li><a href="building/openbsd.html">OpenBSD</a></li>
          </ul>
+         <li><a href="compatibility.html">Game Compatibility</a></li>
        </ul>
       </div>
       <div class="wiki-main-page">
