Update lime pos

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
-    <div id="container">
+    <div style="right: 0px; top: 0px; margin: 1em;" id="container">
         <img id="container" src="lime/lime.png" alt="Lime">
         <img id="object" src="lime/face.png" alt="Eyes">
     </div>
