--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
         #container:not(:hover) #object {
             content: url('lime/face.png'); /* Show the original face.png when not hovering */
         }
+        #lime {
+            position: absolute;
+            right: 0px;
+            top: 0px;
+            margin: 1em;
+        }
     </style>
 </head>
 <body>
@@ -199,7 +205,7 @@
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
-    <div style="right: 0px; top: 0px; margin: 1em;" id="container">
+    <div id="lime">
         <img id="container" src="lime/lime.png" alt="Lime">
         <img id="object" src="lime/face.png" alt="Eyes">
     </div>
