Update lime div to class

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         #container:not(:hover) #object {
             content: url('lime/face.png'); /* Show the original face.png when not hovering */
         }
-        #lime {
+        .lime {
             position: absolute;
             right: 0px;
             top: 0px;
@@ -204,7 +204,7 @@
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
-    <div id="lime">
+    <div class="lime">
         <img id="container" src="lime/lime.png" alt="Lime">
         <img id="object" src="lime/face.png" alt="Eyes">
     </div>
