Removed class for manual styling

--- a/index.html
+++ b/index.html
@@ -181,11 +181,6 @@
         #container:not(:hover) #object {
             content: url('lime/face.png'); /* Show the original face.png when not hovering */
         }
-        .lime {
-            position: absolute;
-            right: 0px;
-            top: 0px;
-        }
     </style>
 </head>
 <body>
@@ -204,7 +199,7 @@
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
-    <div class="lime">
+    <div style="position: absolute; right: 0px; top: 0px;" id="container">
         <img id="container" src="lime/lime.png" alt="Lime">
         <img id="object" src="lime/face.png" alt="Eyes">
     </div>
