Removed separate margins, swap for padding

--- a/index.html
+++ b/index.html
@@ -159,7 +159,6 @@
             position: relative;
             width: 45px;
             height: 45px;
-            margin: 10px;
             transition: transform 0.3s ease-in-out;
         }
 
@@ -167,7 +166,6 @@
             position: absolute;
             width: 45px;
             height: auto;
-            margin: 10px;
         }
 
         #container:hover {
@@ -199,7 +197,7 @@
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
-    <div style="position: absolute; right: 0px; top: 0px;" id="container">
+    <div style="position: absolute; right: 0px; top: 0px; padding: 10px;" id="container">
         <img id="container" src="lime/lime.png" alt="Lime">
         <img id="object" src="lime/face.png" alt="Eyes">
     </div>
