Transitions for opacity and transform

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             top: 50%;
             display: inline;
             position: absolute;
+            transition: background-color 0.3s ease;
         }
 
         .dropbtn:hover,
@@ -125,6 +126,10 @@
             position: absolute;
             margin-left: 0.5em;
             left: 0;
+            opacity: 0;
+            transition: opacity 0.3s ease, transform 0.3s ease;
+            transform-origin: top;
+            transform: scale(0.8);
         }
 
         .dropdown-content {
@@ -153,6 +158,11 @@
 
         .dropdown:hover .dropdown-content {
             display: block;
+        }
+
+        .dropdown:hover {
+            opacity: 1;
+            transform: scale(1);
         }
 
         #container {
