Re-add animation

--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
             transform: scale(1);
         }
 
+        .dropdown:hover .dropdown-content {
+            display: block;
+            opacity: 1;
+            transform: translateY(10px);
+        }
+
         #container {
             position: relative;
             width: 45px;
