--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             top: 50%;
             display: inline;
             position: absolute;
+            transition: background-color 0.3s ease;
         }
 
         .dropbtn:hover,
@@ -138,9 +139,9 @@
             left: 0;
             border-radius: 10px;
             opacity: 0;
-            transform: scale(0.8);
             transition: opacity 0.3s ease, transform 0.3s ease;
             transform-origin: top;
+            transform: scale(0.8);
         }
 
         .dropdown-content a {
