--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
             top: 50%;
             display: inline;
             position: absolute;
-            transition: background-color 0.3s ease;
         }
 
         .dropbtn:hover,
@@ -123,7 +122,7 @@
         }
 
         .dropdown {
-            position: absolute;
+            position: relative;
             margin-left: 0.5em;
             left: 0;
         }
@@ -139,9 +138,9 @@
             left: 0;
             border-radius: 10px;
             opacity: 0;
+            transform: scale(0.8);
             transition: opacity 0.3s ease, transform 0.3s ease;
             transform-origin: top;
-            transform: scale(0.8);
         }
 
         .dropdown-content a {
@@ -196,9 +195,9 @@
 </head>
 <body>
 <div id="header">
-    <div class="dropdown">
+    <div class="dropdown" onmouseenter="toggleDropdown(true)" onmouseleave="toggleDropdown(false)">
         <button class="dropbtn">Menu</button>
-        <div class="dropdown-content">
+        <div class="dropdown-content" id="dropdownContent">
             <a href="#about">About</a>
             <a href="#faq">FAQ</a>
             <a href="#todo">To do</a>
@@ -261,6 +260,23 @@
             var img = new Image();
             img.src = array[i];
             preloadImages.list.push(img);
+        }
+    }
+
+    function toggleDropdown(open) {
+        var dropdownContent = document.getElementById('dropdownContent');
+        if (open) {
+            dropdownContent.style.display = 'block';
+            setTimeout(function() {
+                dropdownContent.style.opacity = 1;
+                dropdownContent.style.transform = 'scale(1)';
+            }, 10); // Adding a slight delay for smoother animation
+        } else {
+            dropdownContent.style.opacity = 0;
+            dropdownContent.style.transform = 'scale(0.8)';
+            setTimeout(function() {
+                dropdownContent.style.display = 'none';
+            }, 300); // Same duration as the transition in CSS
         }
     }
 
