--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             cursor: pointer;
             display: inline;
             position: absolute;
+            left: 0;
         }
 
         .dropbtn:hover,
