--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             display: inline;
             position: absolute;
             left: 0;
+            margin-left: 5px;
         }
 
         .dropbtn:hover,
