Update content positioning

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             transform: scale(0.8);
             transition: opacity 0.3s ease, transform 0.3s ease;
             transform-origin: top;
+            margin-top: 10px;
         }
 
         .dropdown-content a {
