--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             display: block;
             width: 100%;
             height: 0.33px;
-            background-color: #999999;
+            background-color: rgba(153, 153, 153, 0.33);
             position: absolute;
             bottom: -0.5em;
             left: 0;
