--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 4px;
+            margin: auto;
         }
 
         #link_tray a {
