Update font in header and drop down

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             justify-content: space-between;
             align-items: center;
             height: 38px;
+            font-family: 'Ubuntu', sans-serif;
         }
 
         #header h1 {
@@ -125,6 +126,7 @@
         .dropdown {
             margin-left: 0.5em;
             left: 0;
+            font-family: 'Ubuntu', sans-serif;
         }
 
         .dropdown-content {
