Update drop button font

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             position: absolute;
             left: 0;
             margin-left: 5px;
+            font-family: 'Ubuntu', sans-serif;
         }
 
         .dropbtn:hover,
