--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -7,6 +7,10 @@
     <title>Lime3DS</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="wiki.css">
+    <link rel="stylesheet" href="compat.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
