--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -51,9 +51,38 @@
                 return json.filter(element => element.title.toLowerCase().includes(searchTerm));
             }
 
-            function getGradientColor(percentage) {
-                const color1 = [255, 0, 0]; // Red
-                const color2 = [220, 0, 0]; // Slightly darker Red
+            function getGradientColor(percentage, compatibility) {
+                let color1, color2;
+                switch (compatibility) {
+                    case 0:
+                        color1 = [255, 0, 0]; // Red
+                        color2 = [220, 0, 0]; // Slightly darker Red
+                        break;
+                    case 1:
+                        color1 = [255, 140, 0]; // Orange
+                        color2 = [220, 100, 0]; // Slightly darker Orange
+                        break;
+                    case 2:
+                        color1 = [255, 255, 0]; // Yellow
+                        color2 = [220, 220, 0]; // Slightly darker Yellow
+                        break;
+                    case 3:
+                        color1 = [0, 255, 0]; // Green
+                        color2 = [0, 200, 0]; // Slightly darker Green
+                        break;
+                    case 4:
+                        color1 = [0, 255, 255]; // Cyan
+                        color2 = [0, 200, 200]; // Slightly darker Cyan
+                        break;
+                    case 5:
+                        color1 = [0, 0, 255]; // Blue
+                        color2 = [0, 0, 220]; // Slightly darker Blue
+                        break;
+                    default:
+                        color1 = [0, 0, 0]; // Black
+                        color2 = [0, 0, 0]; // Black
+                        break;
+                }
                 const r = Math.round((color2[0] - color1[0]) * percentage + color1[0]);
                 const g = Math.round((color2[1] - color1[1]) * percentage + color1[1]);
                 const b = Math.round((color2[2] - color1[2]) * percentage + color1[2]);
@@ -80,27 +109,27 @@
                     switch (element.compatibility) {
                         case 0:
                             compatibilityCell.textContent = 'Perfect';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0)}, ${getGradientColor(1)})`;
+                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 0)}, ${getGradientColor(1, 0)})`;
                             break;
                         case 1:
                             compatibilityCell.textContent = 'Great';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0)}, ${getGradientColor(1)})`;
+                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 1)}, ${getGradientColor(1, 1)})`;
                             break;
                         case 2:
                             compatibilityCell.textContent = 'Okay';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0)}, ${getGradientColor(1)})`;
+                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 2)}, ${getGradientColor(1, 2)})`;
                             break;
                         case 3:
                             compatibilityCell.textContent = 'Bad';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0)}, ${getGradientColor(1)})`;
+                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 3)}, ${getGradientColor(1, 3)})`;
                             break;
                         case 4:
                             compatibilityCell.textContent = 'Intro/Menu';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0)}, ${getGradientColor(1)})`;
+                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 4)}, ${getGradientColor(1, 4)})`;
                             break;
                         case 5:
                             compatibilityCell.textContent = 'Won\'t Boot';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0)}, ${getGradientColor(1)})`;
+                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 5)}, ${getGradientColor(1, 5)})`;
                             break;
                         case 99:
                             compatibilityCell.textContent = 'Not Tested';
