--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -11,6 +11,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Ubuntu', sans-serif;
+        }
+
+        #searchInput {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 12px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+
+        table {
+            width: 80%;
+            margin: 0 auto;
+            border-collapse: collapse;
+        }
+
+        table, th, td {
+            border: 1px solid #333;
+        }
+
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+
+        tr:nth-child(even) {
+            background-color: #444;
+        }
+
+        th {
+            background-color: #222;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
@@ -51,44 +90,6 @@
                 return json.filter(element => element.title.toLowerCase().includes(searchTerm));
             }
 
-            function getGradientColor(percentage, compatibility) {
-                let color1, color2;
-                switch (compatibility) {
-                    case 0:
-                        color1 = [255, 0, 0]; // Red
-                        color2 = [220, 0, 0]; // Slightly darker Red
-                        break;
-                    case 1:
-                        color1 = [255, 140, 0]; // Orange
-                        color2 = [220, 100, 0]; // Slightly darker Orange
-                        break;
-                    case 2:
-                        color1 = [255, 255, 0]; // Yellow
-                        color2 = [220, 220, 0]; // Slightly darker Yellow
-                        break;
-                    case 3:
-                        color1 = [0, 255, 0]; // Green
-                        color2 = [0, 200, 0]; // Slightly darker Green
-                        break;
-                    case 4:
-                        color1 = [0, 255, 255]; // Cyan
-                        color2 = [0, 200, 200]; // Slightly darker Cyan
-                        break;
-                    case 5:
-                        color1 = [0, 0, 255]; // Blue
-                        color2 = [0, 0, 220]; // Slightly darker Blue
-                        break;
-                    default:
-                        color1 = [0, 0, 0]; // Black
-                        color2 = [0, 0, 0]; // Black
-                        break;
-                }
-                const r = Math.round((color2[0] - color1[0]) * percentage + color1[0]);
-                const g = Math.round((color2[1] - color1[1]) * percentage + color1[1]);
-                const b = Math.round((color2[2] - color1[2]) * percentage + color1[2]);
-                return `rgb(${r},${g},${b})`;
-            }
-
             function renderTable(filteredJson) {
                 compatibilityTable.innerHTML = '';
 
@@ -106,34 +107,35 @@
                     titleCell.textContent = element.title;
                     const compatibilityCell = row.insertCell();
 
+                    // Set text content and background color based on compatibility value
                     switch (element.compatibility) {
                         case 0:
                             compatibilityCell.textContent = 'Perfect';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 0)}, ${getGradientColor(1, 0)})`;
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00FF00, #88CC88)'; // Green for Perfect
                             break;
                         case 1:
                             compatibilityCell.textContent = 'Great';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 1)}, ${getGradientColor(1, 1)})`;
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00CC00, #88FF88)'; // Light Green for Great
                             break;
                         case 2:
                             compatibilityCell.textContent = 'Okay';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 2)}, ${getGradientColor(1, 2)})`;
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FFFF00, #FFFF88)'; // Yellow for Okay
                             break;
                         case 3:
                             compatibilityCell.textContent = 'Bad';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 3)}, ${getGradientColor(1, 3)})`;
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FFA500, #FFCC88)'; // Orange for Bad
                             break;
                         case 4:
                             compatibilityCell.textContent = 'Intro/Menu';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 4)}, ${getGradientColor(1, 4)})`;
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FF6600, #FF9966)'; // Dark Orange for Intro/Menu
                             break;
                         case 5:
                             compatibilityCell.textContent = 'Won\'t Boot';
-                            compatibilityCell.style.background = `linear-gradient(to bottom right, ${getGradientColor(0, 5)}, ${getGradientColor(1, 5)})`;
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FF0000, #FF6666)'; // Red for Won't Boot
                             break;
                         case 99:
                             compatibilityCell.textContent = 'Not Tested';
-                            compatibilityCell.style.backgroundColor = '#333'; // Dark Black
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #CCCCCC, #E6E6E6)'; // Gray for Not Tested
                             break;
                         default:
                             compatibilityCell.textContent = 'Unknown';
