Update colors to make them less harsh

--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -72,31 +72,31 @@
                     switch (element.compatibility) {
                         case 0:
                             compatibilityCell.textContent = 'Perfect';
-                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00FF00, #88CC88)'; // Green for Perfect
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00FF00, #00F200)'; // Green for Perfect
                             break;
                         case 1:
                             compatibilityCell.textContent = 'Great';
-                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00CC00, #88FF88)'; // Light Green for Great
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00CC00, #00BF00)'; // Light Green for Great
                             break;
                         case 2:
                             compatibilityCell.textContent = 'Okay';
-                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FFFF00, #FFFF88)'; // Yellow for Okay
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #F2F200, #E6E600)'; // Yellow for Okay
                             break;
                         case 3:
                             compatibilityCell.textContent = 'Bad';
-                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FFA500, #FFCC88)'; // Orange for Bad
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FFA500, #ED9A00)'; // Orange for Bad
                             break;
                         case 4:
                             compatibilityCell.textContent = 'Intro/Menu';
-                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FF6600, #FF9966)'; // Dark Orange for Intro/Menu
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FF6600, #E65C00)'; // Dark Orange for Intro/Menu
                             break;
                         case 5:
                             compatibilityCell.textContent = 'Won\'t Boot';
-                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FF0000, #FF6666)'; // Red for Won't Boot
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #E60000, #D90000)'; // Red for Won't Boot
                             break;
                         case 99:
                             compatibilityCell.textContent = 'Not Tested';
-                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #CCCCCC, #E6E6E6)'; // Gray for Not Tested
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #777777, #666666)'; // Gray for Not Tested
                             break;
                         default:
                             compatibilityCell.textContent = 'Unknown';
