Update great color

--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -76,7 +76,7 @@
                             break;
                         case 1:
                             compatibilityCell.textContent = 'Great';
-                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00CC00, #00BF00)'; // Light Green for Great
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00DD00, #00CF00)'; // Light Green for Great
                             break;
                         case 2:
                             compatibilityCell.textContent = 'Okay';
