Added Animated Logo + Site CSS Update (#7)
* fixed mobile scaling

* mobile fix

* Format FAQ, introduce web buddy, format code

* Updated image href

* Uploaded dynamic lime buddy assets

* Update lime pos

* Lutra = smart

* Why was I adding extra margin?

* Update lime div to class

* Removed class for manual styling

* Removed separate margins, swap for padding

* Remove padding, top and right 5px

* Transitions for opacity and transform

* Fix oopsie

* Re-add animation

* Fix transition

* ACTUAL transition fix

* Update index.html

* :)

* Update index.html

* Fix button pos

* Update content positioning

* fix images not showing

* Polish line

* Lower line opacity

* Update index.html

* Update font + h3::after

* Update font

* Update font

* Update font

* Update font

* Update font

* Update font

* Update font

* Update font

* Update font

* Update index.html

* Update link tray margin again

* Update font in header and drop down

* Update drop button font

* Update root font and others

* Update the auto-update FAQ

* Let's hope this works cuz I gotta go to school

* Added new css link and Ubuntu font links

* Create compat.css

* Add table and search styling

* Update compat.css

* Add compat color coding

* Adapt to styling

* Forgot to add links

* Fix

* Please just work

* Please just work

* Revert :(

* Revert :(

* Update compatibility.html

* Create gradients (lotsa math)

I was fucking looking at LimeGradient's site on accident earlier 😭

* I forgot to use all colors :waaah:

* Added colors

* Lots of tapping (gradients)

* Styles lbozo

* Update colors to make them less harsh

* Update great color

---------

Co-authored-by: LutraVibes <123699770+LutraVibes@users.noreply.github.com>

--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -7,6 +7,9 @@
     <title>Lime3DS</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="wiki.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
@@ -48,8 +51,8 @@
           <h1>FAQ</h1>
           <h3>"Why is it saying a source directory doesnt contain a CMakeLists.txt file?"</h3>
           <p>This means that the subdirectories weren't pulled with the repo. <br> Run <code>git submodule update --init --recursive</code></p>
-          <h3>"How do I update Lime3DS on 'insert platform here'"</h3>
-          <p>Right now there is no auto-updater for Lime3DS. You need to manually download the latest release.</p>
+          <h3>"How do I update Lime3DS on 'insert platform here'?"</h3>
+          <p>Currently, there is no automatic updating system for Lime3DS (one is in the works!). You need to manually download the latest release.</p>
         </div>
       </div>
     </div>
