--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -7,68 +7,112 @@
     <title>Lime3DS</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="wiki.css">
+    <link rel="stylesheet" href="compat.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="app">
-      <div id="header">
-        <div class="dropdown">
-          <button class="dropbtn">Menu</button>
-          <div class="dropdown-content">
-            <a href="../index.html">Home</a>
-            <a href="./wiki.html">Wiki</a>
-          </div>
+        <div id="header">
+            <div class="dropdown">
+                <button class="dropbtn">Menu</button>
+                <div class="dropdown-content">
+                    <a href="../index.html">Home</a>
+                    <a href="./wiki.html">Wiki</a>
+                </div>
+            </div>
+            <div id="link_tray">
+                <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
+                <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
+                <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
+            </div>
+            <img class="lime-logo" src="../lime.svg" width="45px">
         </div>
-        <div id="link_tray">
-            <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
-            <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
-            <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
-        </div>
-        <img class="lime-logo" src="../lime.svg" width="45px">
-      </div>
 
-      <div class="compatibility-list"></div>
+        <input type="text" id="searchInput" placeholder="Search for games...">
+        <div id="compatibilityTable"></div>
     </div>
 
     <script>
         async function getCompatibilityList() {
-            const listDiv = document.querySelector(".compatibility-list")
-
             const res = await fetch("https://raw.githubusercontent.com/Lime3DS/Lime3DS/master/dist/compatibility_list/compatibility_list.json")
             const ogJson = await res.json()
-            const json = ogJson.sort()
-            json.forEach(element => {
-                const gameElement = document.createElement('h3')
-                switch (element.compatibility) {
-                    case 0:
-                        gameElement.innerHTML = `Game: ${element.title} | Compatibility: Perfect`
-                        break
-                    case 1:
-                        gameElement.innerHTML = `Game: ${element.title} | Compatibility: Great`
-                        break
-                    case 2:
-                        gameElement.innerHTML = `Game: ${element.title} | Compatibility: Okay`
-                        break;
-                    case 3:
-                        gameElement.innerHTML = `Game: ${element.title} | Compatibility: Bad`
-                        break;
-                    case 4:
-                        gameElement.innerHTML = `Game: ${element.title} | Compatibility: Intro/Menu`
-                        break;
-                    case 5:
-                        gameElement.innerHTML = `Game: ${element.title} | Compatibility: Won't Boot`
-                        break
-                    case 99:
-                        gameElement.innerHTML = `Game: ${element.title} | Compatibility: Not Tested`
-                        break;
-                    
-                }
-                listDiv.appendChild(gameElement)
+            const json = ogJson.sort((a, b) => a.title.localeCompare(b.title))
+
+            const compatibilityTable = document.getElementById('compatibilityTable');
+            const searchInput = document.getElementById('searchInput');
+
+            searchInput.addEventListener('input', () => {
+                renderTable(filterList(searchInput.value.toLowerCase()));
             });
+
+            function filterList(searchTerm) {
+                return json.filter(element => element.title.toLowerCase().includes(searchTerm));
+            }
+
+            function renderTable(filteredJson) {
+                compatibilityTable.innerHTML = '';
+
+                const table = document.createElement('table');
+                const headerRow = table.insertRow();
+                ['Title', 'Compatibility'].forEach(headerText => {
+                    const header = document.createElement('th');
+                    header.textContent = headerText;
+                    headerRow.appendChild(header);
+                });
+
+                filteredJson.forEach(element => {
+                    const row = table.insertRow();
+                    const titleCell = row.insertCell();
+                    titleCell.textContent = element.title;
+                    const compatibilityCell = row.insertCell();
+
+                    // Set text content and background color based on compatibility value
+                    switch (element.compatibility) {
+                        case 0:
+                            compatibilityCell.textContent = 'Perfect';
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00FF00, #00F200)'; // Green for Perfect
+                            break;
+                        case 1:
+                            compatibilityCell.textContent = 'Great';
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #00DD00, #00CF00)'; // Light Green for Great
+                            break;
+                        case 2:
+                            compatibilityCell.textContent = 'Okay';
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #F2F200, #E6E600)'; // Yellow for Okay
+                            break;
+                        case 3:
+                            compatibilityCell.textContent = 'Bad';
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FFA500, #ED9A00)'; // Orange for Bad
+                            break;
+                        case 4:
+                            compatibilityCell.textContent = 'Intro/Menu';
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #FF6600, #E65C00)'; // Dark Orange for Intro/Menu
+                            break;
+                        case 5:
+                            compatibilityCell.textContent = 'Won\'t Boot';
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #E60000, #D90000)'; // Red for Won't Boot
+                            break;
+                        case 99:
+                            compatibilityCell.textContent = 'Not Tested';
+                            compatibilityCell.style.backgroundImage = 'linear-gradient(to bottom right, #777777, #666666)'; // Gray for Not Tested
+                            break;
+                        default:
+                            compatibilityCell.textContent = 'Unknown';
+                            break;
+                    }
+                });
+
+                compatibilityTable.appendChild(table);
+            }
+
+            renderTable(json);
         }
 
         getCompatibilityList()
     </script>
 
-   <script type="module" src="../index.js"></script>
+    <script type="module" src="../index.js"></script>
 </body>
 </html>
