logo styling class

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
-    <div style="position: absolute; right: 5px; top: 5px;" id="container">
+    <div class="lime-logo" id="container">
         <img id="container" src="lime/lime.png" alt="Lime">
         <img id="object" src="lime/face.png" alt="Eyes">
     </div>
