--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -26,6 +26,7 @@
             <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
             <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
         </div>
+        <img class="lime-logo" src="../lime.svg" width="45px">
       </div>
       <div class="table-of-contents">
         <h2>Table of Contents</h2>
