--- a/public/pages/compatibility.html
+++ b/public/pages/compatibility.html
@@ -27,6 +27,7 @@
                 <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
                 <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
             </div>
+            <img class="lime-logo" src="../lime.svg" width="45px">
         </div>
         <div id="search">
             <input type="text" id="searchInput" placeholder="Search for a game...">
