--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="dropdown-content" id="dropdownContent">
             <a href="#about">About</a>
             <a href="#faq">FAQ</a>
-            <a href="#todo">To do</a>
+            <a href="https://github.com/orgs/Lime3DS/projects/1">To do</a>
             <a href="pages/wiki.html">Wiki</a>
         </div>
     </div>
