--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
 <div id="header">
@@ -22,18 +22,18 @@
         </div>
     </div>
     <div id="link_tray">
-        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a> |
+        <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub</a>|
         <a href="https://discord.com/invite/4ZjMpAp3M6">Discord</a> |
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
     <div class="lime-logo" id="container">
-        <img id="container" src="lime/lime.png" alt="Lime">
-        <img id="object" src="lime/face.png" alt="Eyes">
+        <img id="container" src="public/lime/lime.png" alt="Lime">
+        <img id="object" src="public/lime/face.png" alt="Eyes">
     </div>
 </div>
 
 <div id="box">
-    <img class="box-img" src="lime.svg">
+    <img class="box-img" src="public/lime.svg">
     <h2>Lime3DS</h2>
 </div>
 
