start of adding the download page (functional but not very beautiful)

--- a/download.html
+++ b/download.html
@@ -19,7 +19,6 @@
             <a href="#faq">FAQ</a>
             <a href="#todo">To do</a>
             <a href="pages/wiki.html">Wiki</a>
-            <a href="download.html">download</a>
         </div>
     </div>
     <div id="link_tray">
@@ -32,39 +31,40 @@
         <img id="object" src="public/lime/face.png" alt="Eyes">
     </div>
 </div>
+<section class="text-version">
+<h1>Latest version</h1>
+</section>
 
-<div id="box">
-    <img class="box-img" src="public/">
-    <h2>Lime3DS</h2>
+
+
+<section class="download">
+
+<div class="macOS">
+<a href="https://github.com/Lime3DS/Lime3DS/releases/download/2109/lime3ds-2109-macos-universal.tar.gz"><h2 class="link">download macOS universal</h2></a>
 </div>
 
-<div id="content">
-    <h3 class="index-h3" id="about" style="margin-top: 0em;">About</h3>
-    <p>Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator, forked from Citra. Lime has many features, such as firmware emulation, amiibo loading, and partial support for homebrew applications.</p>
+<div class="windows">
+    <a href="https://github.com/Lime3DS/Lime3DS/releases/download/2109/lime3ds-2109-windows-msvc.zip"><h2 class="link">download windows msvc</h2></a>
+    <a href="https://github.com/Lime3DS/Lime3DS/releases/download/2109/lime3ds-2109-windows-msys2.zip"><h2 class="link">download windows msys2</h2></a>
 
-    <h3 class="index-h3" id="faq">FAQ</h3>
-    <p>Here are some of the most frequently asked questions we get from the Lime3DS Discord server.</p>
-    <p>"Why won't Lime launch on my computer?"<br>There are two executables for Lime3DS, 'lime.exe' and 'lime-qt.exe'. Make sure you are launching 'lime-qt.exe'.</p>
-    <p>"Why does Lime keep crashing?"<br>One of the most common reasons for Lime crashing is insufficient and/or unsupported hardware. 4GB+ of RAM is recommended in order to properly run Lime3DS.</p>
-    <p>What are the minimum specs to run Lime on my device?"<br>PC: <br>
-        Operating System: Windows 10/11 (64-bit), MacOS Big Sur, or modern 64-bit Linux. <br>
-
-        CPU: x68-64 (64-bit) CPU. Single core performance higher than 1,800 on Passmark. <br>
-
-        GPU: OpenGL 4.3 or Vulkan 1.1 support. <br>
-
-        Ram: 2GB of free RAM. 4GB is recommended. <br> <br>
-
-        Android: <br>
-        Operating System: Android 9.0+. <br>
-        CPU: AArch64. Snapdragon 835 SoC or better. <br>
-        GPU: OpenGL ES 3.2 or Vulkan 1.1 support.</p> <br>
-    <p>Have any questions? Please refer to the <a href="https://github.com/Lime3DS/Lime-3DS-Emulator">GitHub repository</a> or the <a href="https://discord.com/invite/4ZjMpAp3M6">Discord server</a>.</p>
-
-    <h3 class="index-h3" id="todo">To do</h3>
-    <p>Sorry, this area is under construction! Please check again soon.</p>
-    <p>Site Created by <a href="https://limegradient.xyz/">LimeGradient</a> and <a href="https://github.com/LutraVibes">LutraVibes</a></p>
 </div>
+
+<div class="androids">
+    <a href="https://github.com/Lime3DS/Lime3DS/releases/download/2109/lime3ds-2109-android-universal.apk"><h2 class="link">download Android</h2></a>
+</div>
+
+<div class="linux">
+    <a href="https://github.com/Lime3DS/Lime3DS/releases/download/2109/lime3ds-2109-linux-appimage.tar.gz"><h2 class="link">download linux</h2></a>
+</div>
+
+</section>
+
+<h3> Sorry, this area is under construction! Please check again soon.</h3>
+
+
+
+
+
 <script>
     // Preload images
     var images = ['lime/face.png', 'lime/smile.png'];
