Add separator in drop-down, link downloads.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <a href="#about">About</a>
             <a href="#faq">FAQ</a>
             <a href="#todo">To do</a>
+            <a>____________</a>
             <a href="pages/wiki.html">Wiki</a>
+            <a href="pages/download.html">Latest Builds</a>
         </div>
     </div>
     <div id="link_tray">
