Added Game Dumping to Wiki

--- a/public/pages/wiki.html
+++ b/public/pages/wiki.html
@@ -43,6 +43,13 @@
            <li><a href="building/android.html">Android</a></li>
            <li><a href="building/openbsd.html">OpenBSD</a></li>
          </ul>
+         <li>Dumping Games</li>
+         <ul>
+          <li><a href="game_dumping/cartridges.html">Dumping Game Cartridges</a></li>
+          <li><a href="game_dumping/digitalinstalls.html">Dumping Digital Installs</a></li>
+          <li><a href="game_dumping/savedata.html">Dumping Save Data</a></li>
+          <li><a href="game_dumping/updatesanddlc.html">Dumping Updates and DLC</a></li>
+         </ul>
          <li><a href="compatibility.html">Game Compatibility</a></li>
        </ul>
       </div>
@@ -53,6 +60,8 @@
           <p>This means that the subdirectories weren't pulled with the repo. <br> Run <code>git submodule update --init --recursive</code></p>
           <h3>"How do I update Lime3DS on 'insert platform here'?"</h3>
           <p>Currently, there is no automatic updating system for Lime3DS (one is in the works!). You need to manually download the latest release.</p>
+          <h3>"Where can I get games/keys?"</h3>
+          <p>You can dump games from your own 3DS console using the wiki articles. We do not condone piracy and any further mention of it will be a 1 day timeout in discord. Further asking will result in a ban.</p>
         </div>
       </div>
     </div>
