The emulator is called Lime3DS, not Lime

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <a href="https://github.com/Lime3DS/Lime-3DS-Emulator/releases">Releases</a>
     </div>
     <div class="lime-logo" id="container">
-        <img id="container" src="lime/lime.png" alt="Lime">
-        <img id="object" src="lime/face.png" alt="Eyes">
+        <img id="container" src="lime/lime.png" alt="Lime3DS logo">
+        <img id="object" src="lime/face.png" alt="Lime3DS logo">
     </div>
 </div>
 
@@ -36,13 +36,13 @@
 
 <div id="content">
     <h3 class="index-h3" id="about" style="margin-top: 0em;">About</h3>
-    <p>Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator, forked from Citra. Lime has many features, such as firmware emulation, amiibo loading, and partial support for homebrew applications.</p>
+    <p>Lime3DS is an open-source, easy-to-use Nintendo 3DS emulator, forked from Citra. Lime3DS has many features, such as firmware emulation, amiibo loading, and partial support for homebrew applications.</p>
 
     <h3 class="index-h3" id="faq">FAQ</h3>
     <p>Here are some of the most frequently asked questions we get from the Lime3DS Discord server.</p>
-    <p>"Why won't Lime launch on my computer?"<br>There are two executables for Lime3DS, 'lime.exe' and 'lime-qt.exe'. Make sure you are launching 'lime-qt.exe'.</p>
-    <p>"Why does Lime keep crashing?"<br>One of the most common reasons for Lime crashing is insufficient and/or unsupported hardware. 4GB+ of RAM is recommended in order to properly run Lime3DS.</p>
-    <p>What are the minimum specs to run Lime on my device?"<br>PC: <br>
+    <p>"Why won't Lime3DS launch on my computer?"<br>There are two executables for Lime3DS, 'lime.exe' and 'lime-qt.exe'. Make sure you are launching 'lime-qt.exe'.</p>
+    <p>"Why does Lime3DS keep crashing?"<br>One of the most common reasons for Lime3DS crashing is insufficient and/or unsupported hardware. 4GB+ of RAM is recommended in order to properly run Lime3DS.</p>
+    <p>What are the minimum specs to run Lime3DS on my device?"<br>PC: <br>
         Operating System: Windows 10/11 (64-bit), MacOS Big Sur, or modern 64-bit Linux. <br>
 
         CPU: x68-64 (64-bit) CPU. Single core performance higher than 1,800 on Passmark. <br>
