--- a/public/pages/building/linux.html
+++ b/public/pages/building/linux.html
@@ -149,7 +149,7 @@
                     </code>
                 </pre>
                 <h1>Building</h1>
-                <h2>Building Lime in Debug Mode (Slow)</h2>
+                <h2>Building Lime3DS in Debug Mode (Slow)</h2>
                 <h3>Using GCC</h3>
                 <pre>
                     <code class="language-bash">
@@ -175,7 +175,7 @@
                 </pre>
                 <p>If you get a weird compile error related to std::span conversions, make sure you are using clang and libc++ 15 or up. This is an issue with libc++ 14.</p>
                 <br>
-                <h2>Building Lime in Release Mode (Optimized)</h2>
+                <h2>Building Lime3DS in Release Mode (Optimized)</h2>
                 <pre>
                     <code class="language-bash">
     mkdir build
@@ -186,7 +186,7 @@
                     </code>
                 </pre>
                 <br>
-                <h2>Building Lime with Debug Symbols</h2>
+                <h2>Building Lime3DS with Debug Symbols</h2>
                 <pre>
                     <code class="language-bash">
     mkdir build
